--- a/validations/pubspec.yaml
+++ b/validations/pubspec.yaml
@@ -16,7 +16,11 @@ dependencies:
 dev_dependencies:
   coverage: ^0.12.2
   build_runner:
-  validations_generator: ^0.8.4
+  validations_generator:
+    git:
+      url: git@github.com:tristanpct/validations.git
+      ref: master
+      path: validations_generator
   pedantic: ^1.0.0
   test: ^1.0.0
   test_coverage: ^0.3.0
