--- a/validations/pubspec.yaml
+++ b/validations/pubspec.yaml
@@ -19,7 +19,7 @@ dev_dependencies:
   validations_generator:
     git:
       url: git@github.com:tristanpct/validations.git
-      ref: master
+      ref: develop
       path: validations_generator
   pedantic: ^1.0.0
   test: ^1.0.0
